# MarketplaceBot

./: .dockerignore  .env.example  .gitignore  README.md  plan-modules.md  plan.md  pyproject.toml
data/: fb-bot.sqlite  fb-listings.sqlite
debug/marketplace-inbox/: after-click.html  graphql-bodies.txt  inbox-row-probe.json  inbox.html
debug/messenger-chat/: FINDINGS.json  FINDINGS.md
debug/messenger-chat/1200198092232951/: page.html  probe.json  summary.json
debug/messenger-chat/2131486027397586/: page.html  probe.json  summary.json
debug/messenger-chat/2485540785247111/: page.html  probe.json  summary.json
debug/messenger-chat/858819563627349/: composer-probe.json
docker/: Dockerfile  README.md  docker-compose.yml
fixtures/agent-conversations/: s1.json
scripts/: build_docker.sh  create_browser_profile.py  debug_facebook_login_page.py  debug_marketplace_inbox_rows.py  debug_messenger_chat_history.py  experiment_inbox_sender.py  experiment_send_message.py  mock_marketplace_cli.py  preview_chat_reply.py  setup_venv.sh  test_agent_reply.py  test_fb_store.py  test_listing_cache.py  test_marketplace_login_and_list_chats.py  test_orchestrator_once.py  test_telegram.py
src/: adapters.py  main.py  orchestrator.py
src/fb_agent/: PLAN.md  PROMPT_CACHING.md  __init__.py  agent.py  agent.yaml  classifier.py  config.py  env.py  handoff_summarizer.py  llm.py  models.py  profile.py  prompt_templates.py  prompts.py  prompts.yaml  pyproject.toml  responder.py  seller_input_responder.py
src/fb_agent/fb_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fb_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fb_marketplace/: SDK.md  __init__.py  cli.py  client.py  env.py  helpers.py  listing_cache.py  models.py  pyproject.toml  session.py  timeparse.py
src/fb_marketplace/fb_marketplace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fb_marketplace_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fb_marketplace_mock/: client.py  env.py  models.py  pyproject.toml  seed.py  session.py  store.py
src/fb_store/: __init__.py  chat_policy.py  database.py  listing_cache.py  pyproject.toml  store.py
src/fb_store/fb_store.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fb_telegram/: TELEGRAM_SETUP.md  __init__.py  client.py  config.py  pyproject.toml
src/fb_telegram/fb_telegram.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_env.py  test_helpers.py  test_listing_cache.py  test_orchestrator_once.py  test_timeparse.py
