[project]
name = "fb-marketplace-bot"
version = "0.1.0"
description = "Facebook Marketplace inbox extraction scaffold"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.46,<2",
]

[project.scripts]
fb-marketplace = "fb_marketplace.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
