[project]
name = "fb-bot"
version = "0.1.0"
description = "Facebook Marketplace bot — monorepo orchestrator"
requires-python = ">=3.11"
dependencies = [
  "fb-marketplace",
  "fb-store",
  "fb-agent",
  "fb-telegram",
]

[project.scripts]
fb-bot = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "orchestrator", "adapters"]
