[project]
name = "fb-store"
version = "0.1.0"
description = "Persistence for Facebook Marketplace bot state"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fb_store"]
package-dir = {"fb_store" = "."}
