[project]
name = "fb-telegram"
version = "0.1.0"
description = "Telegram transport for Facebook Marketplace bot"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fb_telegram"]
package-dir = {"fb_telegram" = "."}
